cmake_minimum_required(VERSION 3.10)
project(logo)
aux_source_directory(src SRC_LIST)
aux_source_directory(src/png SRC_PNG_LIST)
aux_source_directory(src/dummy SRC_DUMMY_LIST)
include_directories(include)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
add_executable(dummy_main ${SRC_LIST} ${SRC_DUMMY_LIST})
add_executable(png_main ${SRC_LIST} ${SRC_PNG_LIST})
target_link_libraries(png_main png)
